--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "db:reset:clean": "npm --prefix server run migrate:reset:clean -- --drop",
     "dev": "npm run setup:dev && npm run mongo:status && concurrently -n SERVER,CLIENT -c blue,green \"npm --prefix server run dev\" \"npm --prefix client start\"",
     "dev:nocheck": "npm run setup:dev && concurrently -n SERVER,CLIENT -c blue,green \"npm --prefix server run dev\" \"npm --prefix client start\"",
-    "build": "npm --prefix server run build && npm --prefix client run build",
+    "build": "npm --prefix server run build && npm --prefix client run build && node scripts/copy-client-to-server.mjs",
     "server:dev": "npm --prefix server run dev",
     "server:build": "npm --prefix server run build",
     "server:start": "npm --prefix server run start",
