--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "install:all": "npm install && npm install --prefix server && npm install --prefix client",
+    "render:build": "npm run install:all && npm run build",
     "mongo:status": "node scripts/check-mongo.mjs",
     "setup:dev": "node scripts/setup-dev.mjs",
     "db:reset:clean": "npm --prefix server run migrate:reset:clean -- --drop",
