--- a/server/.env.example
+++ b/server/.env.example
@@ -14,6 +14,10 @@ PORT=3001
 #   node -e "console.log(require('crypto').randomBytes(32).toString('base64'))"
 SSN_ENCRYPTION_KEY_B64=xTQlJpH3vQNmiwENkZBYiWkXTAvR72aPD/1XPdoq1w=
 
+# Email (invite + password reset). If unset, emails are logged but not sent.
+# SMTP_URL=smtps://USER:PASSWORD@smtp.example.com:465
+# SMTP_FROM=FAIS <no-reply@yourdomain.com>
+
 # Legacy SQL Server (for export -> JSON)
 # Example (SQL auth):
 # LEGACY_SQLSERVER_CONNECTION_STRING="Server=tcp:HOST,1433;Database=financialAff;User Id=USERNAME;Password=PASSWORD;Encrypt=true;TrustServerCertificate=true;"
