Refactor: using yahoo as mail proxy

--- a/server/.env.example
+++ b/server/.env.example
@@ -15,8 +15,14 @@ PORT=3001
 SSN_ENCRYPTION_KEY_B64=xTQlJpH3vQNmiwENkZBYiWkXTAvR72aPD/1XPdoq1w=
 
 # Email (invite + password reset). If unset, emails are logged but not sent.
+# Option A: single URL
 # SMTP_URL=smtps://USER:PASSWORD@smtp.example.com:465
-# SMTP_FROM=FAIS <no-reply@yourdomain.com>
+# Option B: separate vars (e.g. Yahoo: smtp.mail.yahoo.com, port 465 or 587)
+# SMTP_HOST=smtp.mail.yahoo.com
+# SMTP_PORT=465
+# SMTP_USER=your-email@yahoo.com
+# SMTP_PASS=your-app-password
+# SMTP_FROM=FAIS <your-email@yahoo.com>
 
 # Legacy SQL Server (for export -> JSON)
 # Example (SQL auth):
