--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.2.1",
     "mssql": "^11.0.1",
+    "node-cron": "^4.2.1",
     "nodemailer": "^8.0.1",
     "pdf-lib": "^1.17.1",
     "playwright": "^1.55.0",
@@ -33,6 +34,7 @@
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mssql": "^9.1.9",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^7.0.10",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
