Feature: Added AI reporting capabilities

--- a/server/.env.example
+++ b/server/.env.example
@@ -24,6 +24,9 @@ SSN_ENCRYPTION_KEY_B64=xTQlJpH3vQNmiwENkZBYiWkXTAvR72aPD/1XPdoq1w=
 # SMTP_PASS=your-app-password
 # SMTP_FROM=FAIS <your-email@yahoo.com>
 
+# AI reports (optional). If unset, report endpoints return 503.
+# OPENAI_API_KEY=sk-...
+
 # Legacy SQL Server (for export -> JSON)
 # Example (SQL auth):
 # LEGACY_SQLSERVER_CONNECTION_STRING="Server=tcp:HOST,1433;Database=financialAff;User Id=USERNAME;Password=PASSWORD;Encrypt=true;TrustServerCertificate=true;"
