--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "mssql": "^11.0.1",
     "node-cron": "^4.2.1",
     "nodemailer": "^8.0.1",
+    "openai": "^4.104.0",
     "pdf-lib": "^1.17.1",
     "playwright": "^1.55.0",
     "zod": "^4.3.6"
